<resources>
    <string name="app_name">Pet Therapy</string>
    <string name="login">Inicio de Sesión</string>
    <string name="email">Usuario o Email</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_button">INGRESAR</string>
    <string name="havent_accounttext">¿No tienes una cuenta?</string>
    <string name="registerhere_text">Registrate Aqui</string>
    <string name="registertext">Registro</string>
    <string name="name_text">Nombre</string>
    <string name="last_name_text">Apellido</string>
    <string name="phone_text">Telefono</string>
    <string name="confirm_password_text">Confirmar contraseña</string>
    <string name="create_account_text">Crear cuenta</string>
    <string name="toast_confirm_password">Las contraseñas no coinciden</string>
    <string name="toast_send_email">Correo Enviado</string>
    <string name="toast_not_send_email">Error al enviar el correo</string>
    <string name="welcome_message">Esta aplicación le será de utilidad para que usted pueda encontrar diferentes organizaciones las cuales ofrecen sus servicios para los animales de compañía y para los cuales puede contactar y mediante diferentes medios como chat o videollamada.
Sabemos perfectamente que un animal de compañía puede ser de gran utilidad para elevar el estado de animo y a su vez conocemos perfectamente su preocupación por el cuidado de los animales, por lo que podemos asegurar que todas las organizaciones dentro de esta app hacen un cuidado correcto de los animales.</string>
    <string name="message_recovery_text">Recuperación de contraseña</string>
    <string name="enter_your_email_message">Ingrese su correo electronico para restablecer su contraseña</string>
    <string name="send_button">ENVIAR</string>
    <string name="toast_error_auth_message">Error en la autenticacion</string>
    <string name="check_box_text">Registrarse como admin</string>
    <string name="welcome_message_admin">Esta aplicación le servirá para que su organización pueda ponerse en contacto con los distintos clientes que se registren y que necesiten algún tipo de terapia.
Es por ello que contamos con distintas herramientas para que usted y su cliente puedan llegar a un acuerdo en cuestión de alguna visita remota posibilitanto el uso del chat o inclusive de la videollamada.</string>
    <string name="welcome_message_admin_title">Bienvenido a la App Pet Therapy</string>
    <string name="yes_message">Administrador</string>
    <string name="no_message">Usuario</string>
    <string name="show_name">Nombre Apellido</string>
    <string name="biblio_admin">Bibliografía Opcional</string>
    <string name="chat_with_message">Chat con </string>
    <string name="user_not_found">Error usuario no encontrado</string>
    <string name="user_block_message">¿Desea bloquear a este usuario?</string>
    <string name="block_user_title">Bloquear Usuario</string>
    <string name="please_user_block">Error al enviar el mensaje</string>
    <string name="unblock_user_title">Desbloquear Usuario</string>
    <string name="user_unblock_message">¿Desea desbloquear a este usuario?</string>
    <string name="error_button">No tiene los permisos para esta accion</string>
    <string name="cancelo_llamada">Canceló la llamada</string>
    <string name="error_al_conectar_llamada">Error al conectar la llamada, vuelva a intentar</string>
    <string name="llamando">Llamando</string>
    <string name="new_person_chat">Agregar persona al chat</string>
    <string name="add_button">Agregar</string>
    <string name="search_text">Buscar</string>
    <string name="choose_option_admin">Escoja una opción</string>
    <string name="option_send_image">Enviar imagen</string>
    <string name="option_add_person">Agregar persona al chat</string>
    <string name="option_block_person">Bloquear usuario</string>
    <string name="close_app">Cerrar Aplicación</string>
    <string name="question_close_app">¿Estás seguro de cerrar la aplicación</string>
    <string name="option_admin_title">Opción de Administrador</string>
    <string name="option_admin">Este tipo de cuenta permite brindar informaión acerca de los animales de compañía de su centro de terapia.</string>
    <string name="option_admin2">¿Desea Elegir esta opción?</string>
    <string name="option_user_title">Opción de Usuario</string>
    <string name="option_user">Este tipo de cuenta permite obtener información acerca de los animales de compañía en centros de terapia.</string>
    <string name="option_user2">¿Desea Elegir esta opción?</string>
</resources>