<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ForgotPassword">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="449dp"
        android:layout_height="440dp"
        android:layout_x="-28dp"
        android:layout_y="-9dp"
        app:srcCompat="@drawable/pet_fondo" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="449dp"
        android:layout_height="388dp"
        android:layout_x="-22dp"
        android:layout_y="-1dp"
        app:srcCompat="@drawable/animales_ico" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="33dp"
        android:layout_height="27dp"
        android:layout_x="318dp"
        android:layout_y="15dp"
        android:onClick="changeLanguageEN"
        app:srcCompat="@mipmap/eua_ico" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="33dp"
        android:layout_height="27dp"
        android:layout_x="281dp"
        android:layout_y="15dp"
        android:onClick="changeLanguageES"
        app:srcCompat="@mipmap/mex_ico" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_x="29dp"
        android:layout_y="231dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/message_recovery_text"
        android:textColor="#545454"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_x="22dp"
        android:layout_y="393dp"
        android:background="@drawable/stylo_borde_editext"
        android:backgroundTint="@color/gris"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#545454"
        android:textColorHighlight="#F3943C"
        android:textColorHint="#545454"
        android:textColorLink="#F3943C" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_x="27dp"
        android:layout_y="327dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/enter_your_email_message"
        android:textColor="#545454" />

    <Button
        android:layout_width="247dp"
        android:layout_height="36dp"
        android:layout_x="56dp"
        android:layout_y="490dp"
        android:background="@drawable/boton_redondeado"
        android:fontFamily="@font/roboto_light"
        android:onClick="send"
        android:text="@string/send_button"
        android:textColor="#FFFFFF"
        app:backgroundTint="#F3943C" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="62dp"
        android:layout_height="63dp"
        android:layout_x="179dp"
        android:layout_y="370dp"
        android:visibility="gone"
        android:indeterminate="true"/>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="16dp"
        android:layout_y="16dp"
        android:onClick="BotonLOGIN2"
        app:srcCompat="@drawable/boton_regresar" />

</AbsoluteLayout>